add Admin Panel Pages

--- a/Core_Project/Views/Shared/Components/ExperienceList/Default.cshtml
+++ b/Core_Project/Views/Shared/Components/ExperienceList/Default.cshtml
@@ -17,7 +17,7 @@
                                 <div>
                                     <h3 class="h5 mb-1">@item.Name</h3>
                                     <div class="text-muted text-small"><small>(@item.Date)</small></div>
-                                </div><img src="@item.ImageUrl" width="48" height="48" alt="ui-ux" />
+                                </div><img src="@item.ImageUrl" width="48" height="48" alt="@item.ImageUrl" />
                             </div>
                         </div>
                         <div class="card-body px-3 py-2">
