Add Project page in Admin Panel

--- a/Core_Project/Views/Portfolio/AddProject.cshtml
+++ b/Core_Project/Views/Portfolio/AddProject.cshtml
@@ -14,16 +14,29 @@
     <br />
     <label>Proje İsmi</label>
     <input type="text" name="Name" value="" class="form-control" />
+    @Html.ValidationMessageFor(x => x.Name)
     <br />
     <label>Görsel 1</label>
     <input type="text" name="ImageUrl" value="" class="form-control" />
+    @Html.ValidationMessageFor(x => x.ImageUrl)
     <br />
     <label>Görsel 2</label>
     <input type="text" name="ImageUrl2" value="" class="form-control" />
+    @Html.ValidationMessageFor(x => x.ImageUrl2)
     <br />
     <label>Proje URL</label>
     <input type="text" name="ProjectUrl" value="" class="form-control" />
+    @Html.ValidationMessageFor(x => x.ProjectUrl)
     <br />
+    <label>Ücret</label>
+    <input type="text" name="Ucret" value="" class="form-control" />
+    @Html.ValidationMessageFor(x => x.Ucret)
+    <br />
+    <label>Tamamlanma Oranı</label>
+    <input type="text" name="Oran" value="" class="form-control" />
+    @Html.ValidationMessageFor(x => x.Oran)
+<br />
+
     <button class="btn btn-info">Kaydet</button>
 </form>
 
