--- a/Core_Project/Views/Feature/Index.cshtml
+++ b/Core_Project/Views/Feature/Index.cshtml
@@ -6,19 +6,38 @@
 }
 
 
-@using (Html.BeginForm("Index", "Feature", "Post"))
+@using (Html.BeginForm("Index", "Feature", FormMethod.Post))
 {
-    @Html.HiddenFor(x => x.FeatureID)
-    <br />
-    <label>Başlığı</label>
-    @Html.TextBoxFor(x => x.Header, new { @class = "form-control" })
-    <br />
-    <label>Ad Soyad</label>
-    @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-    <br />
-    <label>Pozisyon</label>
-    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
-    <br />
-    <button class="btn btn-success">Kaydet</button>
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+
+                <p class="card-description">Hakkımda Düzenleme Paneli</p>
+                <form class="forms-sample">
+
+                    <div class="form-group" style="display:none">
+                        <label>ID</label>
+                        <input type="text" class="form-control" value="@Model.FeatureID" name="FeatureID">
+                    </div>
+                    <div class="form-group">
+                        <label>Başlık</label>
+                        <input type="text" class="form-control" value="@Model.Header" name="Header">
+                    </div>
+                    <div class="form-group">
+                        <label>İsim Soyisim</label>
+                        <input type="text" class="form-control" value="@Model.Name" name="Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Açıklama</label>
+                        <input type="text" class="form-control" value="@Model.Title" name="Title">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
+                    <button class="btn btn-dark">İptal</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
 }
 
