--- a/Core_Project/Views/Service/AddService.cshtml
+++ b/Core_Project/Views/Service/AddService.cshtml
@@ -1,4 +1,4 @@
-﻿                            
+﻿
 @{
     ViewData["Title"] = "AddService";
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
@@ -8,14 +8,24 @@
     <h3 class="mb-0">Hizmet Ekleme Sayfası</h3>
 </div>
 
-<form method="post" class="form-group">
+@using (Html.BeginForm("AddService", "Service", FormMethod.Post))
+{
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
 
-    <br />
-    <label>Hizmet İsmi</label>
-    <input type="text" name="Title" value="" class="form-control"/>
-    <br />
-    <label>Resim URL</label>
-    <input type="text" name="ImageUrl" value="" class="form-control"/>
-    <br />
-    <button class="btn btn-info">Kaydet</button>
-</form>
+                <p class="card-description"> Yeni Hizmet Ekleme Paneli </p>
+                <form class="forms-sample">
+                    <br />
+                    <label>Hizmet İsmi</label>
+                    <input type="text" name="Title" value="" class="form-control" />
+                    <br />
+                    <label>Resim URL</label>
+                    <input type="text" name="ImageUrl" value="" class="form-control" />
+                    <br />
+                    <button class="btn btn-info">Kaydet</button>
+                </form>
+            </div>
+        </div>
+    </div>
+}
