--- a/Core_Project/Views/Service/UpdateService.cshtml
+++ b/Core_Project/Views/Service/UpdateService.cshtml
@@ -10,13 +10,23 @@
 
 @using (Html.BeginForm("UpdateService", "Service", FormMethod.Post))
 {
-    @Html.HiddenFor(x => x.ServiceID)
-    <br />
-    <label>Hizmetlerim</label>
-    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
-    <br />
-    <label>Image Url</label>
-    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
-    <br />
-    <button class="btn btn-success">Güncelle</button>
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+
+                <p class="card-description"> Yeni Hizmet Ekleme Paneli </p>
+                <form class="forms-sample">
+                    @Html.HiddenFor(x => x.ServiceID)
+                    <br />
+                    <label>Hizmetlerim</label>
+                    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                    <br />
+                    <label>Image Url</label>
+                    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
+                    <br />
+                    <button class="btn btn-success">Güncelle</button>
+                </form>
+            </div>
+        </div>
+    </div>
 }
